# pkg/handlers/handlers.go
@@ -1,6 +1,7 @@
 package handlers
 
 import (
+	"fmt"
 	"net/http"
 
 	"github.com/dhruvbehl/address-book/api"
@@ -14,16 +15,16 @@ import (
 // @Description Show all the contacts stored on the server
 // @Accept */*
 // @Produce json
-// @Success 200 {array} map[string]api.Contact{}
-// Failure 404 {object} map[string]interface{} "Not Found"
+// @Success 200 {array} api.ApiResponse{}
+// @Failure 204 {object} api.ApiResponse{} "Not Found"
 // @Router /contacts [get]
 func GetAllContactHandler(ctx *gin.Context) {
 	response, err := contact.GetAllContact()
 	if err != nil {
-		ctx.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
+		ctx.JSON(http.StatusNoContent, api.ApiResponse{Status: http.StatusNoContent, Data: "", Message: err.Error()})
 		return
 	}
-	ctx.JSON(http.StatusOK, gin.H{"data": response})
+	ctx.JSON(http.StatusOK, api.ApiResponse{Status: http.StatusOK, Data: response, Message: ""})
 }
 
 // GetContactById godoc
@@ -33,17 +34,17 @@ func GetAllContactHandler(ctx *gin.Context) {
 // @Param id path string true "Contact ID"
 // @Accept */*
 // @Produce json
-// @Success 200 {object} map[string]api.Contact{}
-// Failure 404 {object} map[string]interface{} "Not Found"
+// @Success 200 {object} api.ApiResponse{}
+// @Failure 204 {object} api.ApiResponse{} "Not Found"
 // @Router /contact/{id} [get]
 func GetContactByIdHandler(ctx *gin.Context) {
 	id := ctx.Param(("id"))
 	response, err := contact.GetContactById(id)
 	if err != nil {
-		ctx.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
+		ctx.JSON(http.StatusNoContent, api.ApiResponse{Status: http.StatusNoContent, Data: "", Message: err.Error()})
 		return
 	}
-	ctx.JSON(http.StatusOK, gin.H{"data": response})
+	ctx.JSON(http.StatusOK, api.ApiResponse{Status: http.StatusOK, Data: response, Message: ""})
 }
 
 // GetContactById godoc
@@ -53,17 +54,17 @@ func GetContactByIdHandler(ctx *gin.Context) {
 // @Param id path string true "Contact ID"
 // @Accept */*
 // @Produce json
-// @Success 200
-// Failure 404 {object} map[string]interface{} "Not Found"
+// @Success 200 {object} api.ApiResponse{}
+// @Failure 204 {object} api.ApiResponse{} "Not Found"
 // @Router /contact/{id} [delete]
 func DeleteContactByIdHandler(ctx *gin.Context) {
 	id := ctx.Param("id")
 	err := contact.DeleteContactById(id)
 	if err != nil {
-		ctx.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
+		ctx.JSON(http.StatusNoContent, api.ApiResponse{Status: http.StatusNoContent, Data: "", Message: err.Error()})
 		return
 	}
-	ctx.JSON(http.StatusOK, nil)
+	ctx.JSON(http.StatusOK, api.ApiResponse{Status: http.StatusOK, Data: "", Message: fmt.Sprintf("Successfully deleted record with id: [%v]", id)})
 }
 
 // CreateContact godoc
@@ -73,22 +74,22 @@ func DeleteContactByIdHandler(ctx *gin.Context) {
 // @Param contactRequest body api.Contact true "Contact Request Body"
 // @Accept json
 // @Produce json
-// @Success 201 {object} map[string]api.Contact{}
-// Failure 409 {object} map[string]interface{} Conflict
-// Failure 500 {object} map[string]interface{} "Internal Server Error"
+// @Success 201 {object} api.ApiResponse{}
+// @Failure 409 {object} api.ApiResponse{} Conflict
+// @Failure 500 {object} api.ApiResponse{} "Internal Server Error"
 // @Router /contact [post]
 func CreateContactHandler(ctx *gin.Context) {
 	var c api.Contact
 	if err := ctx.Bind(&c); err != nil {
-		ctx.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		ctx.JSON(http.StatusInternalServerError, api.ApiResponse{Status: http.StatusInternalServerError, Data: "", Message: err.Error()})
 		return
 	}
 	response, err := contact.UpsertContact(c, "")
 	if err != nil {
-		ctx.JSON(http.StatusConflict, gin.H{"error": err.Error()})
+		ctx.JSON(http.StatusConflict, api.ApiResponse{Status: http.StatusConflict, Data: "", Message: err.Error()})
 		return
 	}
-	ctx.JSON(http.StatusCreated, gin.H{"data": response})
+	ctx.JSON(http.StatusCreated, api.ApiResponse{Status: http.StatusCreated, Data: response, Message: ""})
 }
 
 // UpdateContact godoc
@@ -99,21 +100,21 @@ func CreateContactHandler(ctx *gin.Context) {
 // @Param contactRequest body api.Contact true "Contact Request Body"
 // @Accept json
 // @Produce json
-// @Success 201 {object} map[string]api.Contact{}
-// Failure 500 {object} map[string]interface{} "Internal Server Error"
-// Failure 404 {object} map[string]interface{} "Not Found"
+// @Success 201 {object} api.ApiResponse{}
+// @Failure 500 {object} api.ApiResponse{} "Internal Server Error"
+// @Failure 404 {object} api.ApiResponse{} "Not Found"
 // @Router /contact/{id} [put]
 func UpdateContactHandler(ctx *gin.Context) {
 	var c api.Contact
 	id := ctx.Param("id")
 	if err := ctx.Bind(&c); err != nil {
-		ctx.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		ctx.JSON(http.StatusInternalServerError, api.ApiResponse{Status: http.StatusInternalServerError, Data: "", Message: err.Error()})
 		return
 	}
 	response, err := contact.UpsertContact(c, id)
 	if err != nil {
-		ctx.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
+		ctx.JSON(http.StatusNoContent, api.ApiResponse{Status: http.StatusNoContent, Data: "", Message: err.Error()})
 		return
 	}
-	ctx.JSON(http.StatusCreated, gin.H{"data": response})
+	ctx.JSON(http.StatusCreated, api.ApiResponse{Status: http.StatusCreated, Data: response, Message: ""})
 }
